clusters/main/kubernetes/system/longhorn/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: domain-0-le-prod
    cert-manager.io/private-key-rotation-policy: Always
#    nginx.ingress.kubernetes.io/auth-method: 'GET'
#    nginx.ingress.kubernetes.io/auth-url: 'http://authelia.authelia.svc.cluster.local:9091/api/verify'
#    nginx.ingress.kubernetes.io/auth-signin: 'https://auth.${DOMAIN_1}?rm=$request_method'
#    nginx.ingress.kubernetes.io/auth-response-headers: 'Remote-User,Remote-Name,Remote-Groups,Remote-Email'
spec:
  rules:
  - host: longhorn.${DOMAIN_0}
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
  tls:
    - hosts:
      - longhorn.${DOMAIN_0}
      secretName: longhorn-tls-0
